# ElectronicChessBoard

./: BadGame.txt  BadGame.txt.save  Cargo.toml  README.md  badgame.txt
Cad/: Case.f3d  Case.step
Cad/ChessBoardKiCad/: ChessBoardKiCad.kicad_pcb  ChessBoardKiCad.kicad_pro  ChessBoardKiCad.xml  fp-info-cache  fp-lib-table
Cad/ChessBoardKiCad/Manufacture/: ChessBoardKiCad-B_Cu.gbr  ChessBoardKiCad-B_Mask.gbr  ChessBoardKiCad-B_Paste.gbr  ChessBoardKiCad-B_Silkscreen.gbr  ChessBoardKiCad-Edge_Cuts.gbr  ChessBoardKiCad-F_Cu.gbr  ChessBoardKiCad-F_Mask.gbr  ChessBoardKiCad-F_Paste.gbr  ChessBoardKiCad-F_Silkscreen.gbr  ChessBoardKiCad-job.gbrjob  ChessBoardKiCad.drl  POS.csv
Cad/Design Files/: Case.f3d  Case.step  ChessPieceBase.scad  CutCylinder.scad
Cad/Manufacturing/: Brace.dxf  Corner.stl  LongPanel.dxf  LongPanelCutout.dxf  PlateSpacer.stl  ScreenCover.stl  ScreenSpacer.stl  ShortPanel.dxf  SwitchPlate.stl  TopPanel.dxf
ChessBoardKiCad/: ChessBoardKiCad.kicad_pcb  ChessBoardKiCad.kicad_prl  ChessBoardKiCad.kicad_sch  ChessBoardKiCad.kicad_sch-bak
ChessBoardKiCad/Manufacture/: BOM.csv  ChessBoardKiCad-B_Cu.gbr  ChessBoardKiCad-B_Mask.gbr  ChessBoardKiCad-B_Paste.gbr  ChessBoardKiCad-Edge_Cuts.gbr  ChessBoardKiCad-F_Mask.gbr  ChessBoardKiCad-F_Paste.gbr  ChessBoardKiCad.drl
ChessBoardKiCad/USB-C.pretty/: USB-310D-B-SU.kicad_mod
Code/chess2/: Cargo.toml  Embed.toml
Code/chess2/.cargo/: config
Code/chess2/src/: algorithm.rs  board.rs  lib.rs  main.rs  piece.rs
src/: algorithm.rs  board.rs  lib.rs  main.rs  piece.rs  zobrist.rs
