[package]
name = "chess2"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
arrform = "0.1.1"
cortex-m = "^0.6.3"       # Access to the generic ARM peripherals
cortex-m-rt = "^0.6.12"   # Startup code for the ARM Core
embedded-hal = "^0.2.4"   # Access to generic embedded functions (`set_high`)
embedded-time = "0.12.1"
panic-halt = "^0.2.0"     # Panic handler
rtt-target = {version = "0.3.1", features = ["cortex-m"]}

# Access to the STM32F103 HAL.
[dependencies.stm32f1xx-hal]
# STM32F103C8T6 contains 64kB of flash which is medium density
features = ["stm32f103", "rt", "medium"]
version = "^0.6.1"
